# logitech-control

./: Cargo.toml  build.rs
.circleci/: config.yml
.github/workflows/: push.yaml
assets/: index.html
macos/LogitechControl/: AppDelegate.swift  LogitechControlApp.swift  Message.swift  WebSocketHandler.swift
macos/LogitechControl.xcodeproj/: project.pbxproj
server/: Cargo.toml  build.rs  resources.rc
server/assets/: index.html
server/src/: gui.rs  main.rs  serial.rs  server.rs  state.rs  tray.rs
src/: debug.rs  gui.rs  main.rs  serial.rs  state.rs
