[package]
name = "logitech-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
serialport = "4.0.1"
wry = { version = "0.14.0", features = ["tray"] }
tao = { version = "0.7", default-features = false, features = [ "serde" ] }
