[package]
name = "logitech-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.1", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
serialport = "4.0.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.2.0", features = ["fs"] }
futures = "0.3"
